--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,12 @@
 .full{
     width:100%;
-    min-height: 80vh;
+    min-height: 60vh;
     height:inherit;
 }
 
 .half{
     width:100%;
-    min-height:40vh;
+    min-height:30vh;
     height:inherit;
 }
 
@@ -21,7 +21,7 @@ a{
 }
 
 p {
-  font-family: 'Poppins', sans-serif
+  font-family: 'Montserrat', sans-serif
 }
 
 img{
